add macos push token docs
